<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">가상PC 원격제어</string>

    <string name="label_server_address">서버 주소 (예: 192.168.0.5:8080)</string>
    <string name="label_use_https">HTTPS 사용 (인터넷에 공개된 서버일 때)</string>
    <string name="label_password">접속 비밀번호</string>
    <string name="label_totp">인증앱 코드</string>
    <string name="action_login">접속</string>
    <string name="action_guest_login">1회성 코드로 접속</string>
    <string name="label_guest_code">접속 코드</string>

    <string name="title_devices">내 PC</string>
    <string name="action_logout">로그아웃</string>
    <string name="action_add_device">새 PC 등록</string>
    <string name="label_pair_code">페어링 코드</string>
    <string name="label_device_name">PC 이름</string>
    <string name="action_register">등록</string>
    <string name="action_connect">접속</string>
    <string name="action_remove">삭제</string>
    <string name="status_online">온라인</string>
    <string name="status_offline">오프라인</string>
    <string name="empty_devices">등록된 PC가 없습니다. 새 PC를 등록해주세요.</string>

    <string name="action_close_session">연결 종료</string>
    <string name="action_toggle_keyboard">키보드</string>
    <string name="action_right_click">우클릭</string>
    <string name="status_connecting">연결 중...</string>
</resources>
